--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
     "SESSION_ID": {
             "description": "Type the Session-ID you got from scaning QR",
             "required": true,
-            "value": "put session id here"
+            "value": "VAJIRA-MD=jIlSzb5L#uQzgHMkfhJXX2KRW8DZQCh00sfp7v2W_sNzq37VyfRQ"
         },
-    "COMMAND_TYPE": {
+    "COMMAND_TYPE": 
             "description": "Put here (button or nonbutton) to change bot command mode",
             "required": true,
             "value": "button"
@@ -19,7 +19,7 @@
     "OWNER_NUMBER": {
             "description": "Put here your number without +",
             "required": true,
-            "value": "947xxxxxxxx"
+            "value": "263776312194"
         },
     "POSTGRESQL_URL": {
             "description": "Put here postgresql url",
